update item style, multi lamguage on footer

--- a/src/app/item-category/item-category.component.html
+++ b/src/app/item-category/item-category.component.html
@@ -4,7 +4,7 @@
     <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out">
             <!-- WOMEN -->
-            <li data-toggle="collapse" data-target="#women" class="collapsed active">
+            <li data-toggle="collapse" data-target="#women" class="collapsed">
                 <a href="#"><i class="fa fa-female fa-lg"></i>WOMEN<span class="arrow"></span></a>
             </li>
             <ul class="sub-menu collapse" id="women">
