--- a/src/app/items-list/items-list.component.css
+++ b/src/app/items-list/items-list.component.css
@@ -1,11 +1,21 @@
 .items-list {
     padding-top: 20px;
+    margin-bottom: 50px;
 }
 
 .item-pic {
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .item-price {
     font-size: 30px;
+}
+
+.item {
+    padding: 10px;
+}
+
+.btn-item {
+    position: absolute;
+    bottom: 10px;
 }
