--- a/src/app/items-list/items-list.component.html
+++ b/src/app/items-list/items-list.component.html
@@ -1,8 +1,17 @@
 <div class="items-list">
     <div class="row">
-        <div *ngFor="let item of demo_items" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <div class="row">
+        <div *ngFor="let item of demo_items" class="card col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <div class="item">
+                <img class="card-img-top item-pic" src="{{item.pic}}">
+                <div class="card-body">
+                    <h5 class="card-title">{{item.name}}</h5>
+                    <p class="card-text">{{item.desc}}</p>
+                    <a href="#" class="btn btn-primary btn-item">Go Get it</a>
+                </div>
+            </div>
+            <!-- <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <img class="card-img-top" src="{{item.pic}}">
                     <img src="{{item.pic}}" class="item-pic" />
                 </div>
             </div>
@@ -20,7 +29,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <p>{{item.desc}}</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
