--- a/src/app/product-search/product-search.component.html
+++ b/src/app/product-search/product-search.component.html
@@ -1,11 +1,30 @@
 <div class="search-block">
     <div class="search-bar">
         <div class="input-group input-group-lg">
-            <input type="text" class="form-control" aria-label="Search item">
+            <input [(ngModel)]="searchKey" type="text" class="form-control" aria-label="Search item">
             <div class="input-group-prepend">
-                <a href="#" class="search-button">
+                <a (click)="onSearch()" class="search-button cursor-pointer">
                     <img src="./../../assets/demo_search.png" width="40" height="40" alt="Search" />
                 </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="myModal" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{dialogTitle}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{dialogBody}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
