--- a/src/app/user-mailbox-detail/user-mailbox-detail.component.html
+++ b/src/app/user-mailbox-detail/user-mailbox-detail.component.html
@@ -1,7 +1,3 @@
-<p>
-    user-mailbox-detail works!
-</p>
-
 <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
         <div style="margin: 3px">
@@ -14,19 +10,53 @@
         <div style="margin: 3px">
             <div class="container1">
                 <div class="row">
-                    <div style="font-size: 30px; margin-left: 15px;">Mail Title</div>
+                    <div style="font-size: 30px; margin-left: 15px;">{{mail.subject}}</div>
                 </div>
-                <div style="font-size: 1px;">———————————————————————————————————————————————————————————————————————————————</div>
-                <div class="sender">Sender: ABC User</div>
-                <div class="receiver">Receiver: DEF User</div>
-                <div class="date">Date: 2018-01-01 12:01:42</div>
-                <div style="font-size: 1px;">———————————————————————————————————————————————————————————————————————————————</div>
-                <div class="content">Mail Content</div>
+                <div class="bottom-line"></div>
+                <div class="sender">Sender: {{mail.sender}}</div>
+                <div class="receiver">Receiver: {{mail.receover}}</div>
+                <div class="date">Date: {{mail.date}}</div>
+                <div class="bottom-line"></div>
+                <div class="content">{{mail.content}}</div>
+                <div class="bottom-line"></div>
+                <div *ngFor="let roll of mail.enroll">
+                    <h4>{{roll}}</h4>
+                </div>
+                <div class="bottom-line"></div>
                 <div class="mail-option">
-                    <button style="margin-right: 10px">Reply</button>
-                    <button style="margin-right: 10px">Delete</button>
-                    <button style="margin-right: 10px">Make Read</button>
+                    <div class="row bottom-button-group">
+                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                            <button style="margin-right: 10px" class="btn btn-default">Reply</button>
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
+                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                            <button style="margin-right: 10px" class="btn btn-default">Delete</button>
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
+                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                            <button style="margin-right: 10px" class="btn btn-default">Make Read</button>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="myModal" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{dialogTitle}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{dialogBody}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
