--- a/src/app/navigation-footer/navigation-footer.component.html
+++ b/src/app/navigation-footer/navigation-footer.component.html
@@ -3,10 +3,10 @@
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
         <!-- <a href="https://mdbootstrap.com/bootstrap-tutorial/"> MDBootstrap.com</a> -->
-        <div class="row language">
+        <!-- <div class="row language">
             <a href="#" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">EN</a>
             <a href="#" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">中</a>
-        </div>
+        </div> -->
     </div>
     <!-- Copyright -->
 
