--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<div class="row justify-content-md-center">
+<!-- <div class="row justify-content-md-center">
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         <div class="container">
             <h1><b>Recommend</b></h1>
@@ -74,4 +74,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
