--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <app-search></app-search>
+        <app-search (searchChange)="onSearchChange($event)"></app-search>
     </div>
 </div>
 
@@ -9,6 +9,6 @@
         <app-item-category></app-item-category>
     </div>
     <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-        <app-items-list></app-items-list>
+        <app-items-list [products]="products"></app-items-list>
     </div>
 </div>
