--- a/src/app/items-list/items-list.component.html
+++ b/src/app/items-list/items-list.component.html
@@ -1,12 +1,16 @@
 <div class="items-list">
     <div class="row">
-        <div *ngFor="let item of demo_items" class="card col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <div *ngFor="let product of products" class="card col-xs-4 col-sm-4 col-md-4 col-lg-4">
             <div class="item">
-                <img class="card-img-top item-pic" src="{{item.pic}}">
+                <img class="card-img-top item-pic" src="{{product.image[0]}}" height="280" width="40">
                 <div class="card-body">
-                    <h5 class="card-title">{{item.name}}</h5>
-                    <p class="card-text">{{item.desc}}</p>
-                    <a href="#" class="btn btn-primary btn-item">Go Get it</a>
+                    <div class="bottom-line"></div>
+                    <h5 class="card-title">{{product.title}}</h5>
+                    <div class="bottom-line"></div>
+                    <p class="card-text">{{product.sub_title}}</p>
+                    <div class="bottom-line"></div>
+                    <button *ngIf="product.type==='auction'" href="#" class="btn btn-primary btn-item">Go Bid it</button>
+                    <button *ngIf="product.type==='buy'" href="#" class="btn btn-primary btn-item">Go Get it</button>
                 </div>
             </div>
             <!-- <div class="row">
