--- a/src/app/product-create/product-create.component.css
+++ b/src/app/product-create/product-create.component.css
@@ -1,24 +1,6 @@
 .container {
-    padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: auto;
-    background-color: lightgray;
-    width: auto;
-    height: auto;
-    margin: auto;
-    padding-bottom: 60px;
-    color: black;
-}
-
-button {
-    background-color: greenyellow;
-}
-
-button:hover {
-    opacity: 0.8;
-}
-
-[type=text],
-[type=number] {
-    width: 100%;
+    position: center;
+    border: 2px solid #E6E6E6;
+    border-width: 5px;
+    border-radius: 10px;
 }
