--- a/src/app/product-create/product-create.component.html
+++ b/src/app/product-create/product-create.component.html
@@ -1,60 +1,150 @@
-<div class="container">
-    <form>
+<div class="row justify-content-md-center margin-bottom-20">
+    <div class="col-xs-0 col-sm-0 col-md-0 col-lg-0">
+        <img src="./../../assets/demo_icon.png" height="100" alt="Icon">
+    </div>
+</div>
 
-
-        <label for="title"><b>Title</b></label>
-        <input type="text" placeholder="Enter Title" name="title" required><br>
-
-        <label for="Subtitle"><b>SubTitle</b></label>
-        <input type="text" placeholder="Enter Subtitle" name="Subtitle" required><br>
-
-        <form action="/action_page.php">
-            <input type="file" id="real">
-            <input type="file" id="real">
-            <input type="file" id="real">
-            <span id="custom-text"></span>
-        </form><br>
-
-        <label><li><input #sell type="radio" name="cik" (change)="0" ><b type="text">Sell</b></li></label><br>
-        <label><li><input #auction type="radio" name="cik" (change)="0"><b type="text">Auction</b></li></label>
-
-
-
+<form actions=".php">
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <h1 class="margin-bottom-40"><b>Create Product</b></h1>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input type="text" class="form-control" [(ngModel)]="title" name="title" placeholder="Title">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input type="text" class="form-control" [(ngModel)]="sub_title" name="sub_title" placeholder="Sub title">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input type="text" class="form-control" [(ngModel)]="category" name="new_password" placeholder="Category">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input type="text" class="form-control" [(ngModel)]="sub_category" name="sub_category" placeholder="Sub Category">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input type="file" name="productImage" id="productImage">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <div class="form-group">
+                    <label><li><input #sell [(ngModel)]="type" type="radio" name="cik" value="buy"><b type="text">Sell</b></li></label><br>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <div class="form-group">
+                    <label><li><input #auction [(ngModel)]="type" type="radio" name="cik" value="auction"><b type="text">Auction</b></li></label>
+                </div>
+            </div>
+        </div>
         <div *ngIf="sell.checked">
 
-
-            <label for="sellPrice"><b>Price:</b></label>
-            <input type="number" name="sellPrice" placeholder="Enter Price" required><br>
-
-            <label for="sellQuantity"><b>Quantity:</b></label>
-            <input type="number" name="sellQuantity" placeholder="Enter Quantity" required>
-            <h1></h1>
-            <input type="submit" value="Submit">
-
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="form-group">
+                        <input type="number" [(ngModel)]="price" class="form-control" name="sellPrice" placeholder="Enter Price"><br>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="form-group">
+                        <input type="number" [(ngModel)]="quantity" class="form-control" name="sellQuantity" placeholder="Enter Quantity" required>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <div *ngIf="auction.checked">
 
+            <div class="row">
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg2">
+                    <label for="startDate">End Date</label>
+                </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                    <div class="form-group">
+                        <input type="date" [(ngModel)]="endDate" class="width-full" id="start" name="trip-start" value="endDate" min="2018-01-01" max="2020-12-31"> <br>
+                    </div>
+                </div>
+            </div>
 
-            <b type="text">Duratio</b><br>
-            <input type="date" id="start" name="trip-start" value="2018-01-01" min="2018-01-01" max="2020-12-31"> <br>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="form-group">
+                        <input type="number" [(ngModel)]="target_bid" class="form-control" name="target_bid" placeholder="Target Bid" required>
+                    </div>
+                </div>
+            </div>
 
-            <label for="AucPrice"><b>Price:</b></label>
-            <input type="number" name="AucPrice" placeholder="Enter Price" required><br>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="form-group">
+                        <input type="number" [(ngModel)]="per_bid" class="form-control" name="per_bid" placeholder="Per Bid" required>
+                    </div>
+                </div>
+            </div>
 
-            <label for="Startbid"><b>Start Bid:</b></label>
-            <input type="number" name="Startbid" placeholder="Enter Start Bid Price" required><br>
-
-            <label for="Perbid"><b>Per Bid:</b></label>
-            <input type="number" name="Perbid" placeholder="Enter Per Bid Price" required><br>
-
-            <h1></h1>
-            <label for="aucQuantity"><b>Quantity:</b></label>
-            <input type="number" name="aucQuantity" value="1">
-            <h1></h1>
-            <input type="submit" value="Submit">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="form-group">
+                        <input type="number" [(ngModel)]="quantity" class="form-control" name="sellQuantity" placeholder="Enter Quantity" required>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
-    </form>
+        <div class="bottom-line"></div>
+        <div class="row">
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <div class="form-group">
+
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"></div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <div class="form-group">
+                    <button type="button" (click)="onSubmit()" class="btn btn-primary width-full">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
+
+<div id="myModal" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{dialogTitle}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+            </div>
+            <div class="modal-body">
+                {{dialogBody}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
