--- a/src/app/product-search-result/product-search-result.component.html
+++ b/src/app/product-search-result/product-search-result.component.html
@@ -1,4 +1,10 @@
 <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <app-search></app-search>
+    </div>
+</div>
+
+<div class="row">
     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
         <app-item-category></app-item-category>
     </div>
