--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <app-item-category></app-item-category>
+        <app-item-category (searchChange)="onSearchChange($event)"></app-item-category>
     </div>
     <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
         <app-items-list [products]="products"></app-items-list>
