add product detail and buy function

--- a/src/app/items-list/items-list.component.html
+++ b/src/app/items-list/items-list.component.html
@@ -15,7 +15,7 @@
                     </div>
                     <div *ngIf="product.type==='buy'">
                         <button (click)="onGoItClicked(product)" href="#" class="btn btn-primary btn-item product_button">Go Get it</button>
-                        <h4>$ {{product.price}}</h4>
+                        <h4>$ {{product.price}} up</h4>
                     </div>
                 </div>
             </div>
