--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -3,44 +3,166 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <form action="/action_page.php">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 back">
-                    <a href="/#"><img src="./../../assets/back.jpg" height="50" alt="back" /></a>
+                    <a href="/#"><img src="./../../assets/back.jpg" height="50" width="150" alt="back" /></a>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <img src="{{product.image[0]}}" class="item-pic" />
-                </div>
-                <div class="row">
-                    <div class="col-25">
-                        <label name="iname">Item Name: </label>
+                <div *ngIf="product.type==='buy'">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <img src="{{product.image[0]}}" height="400" width="600" class="item-pic" />
                     </div>
-                    <div class="col-25">
-                        <label name="item name">{{item.name}}</label>
+                    <div class="row">
+                        <div class="col-25">
+                            <label name="iname">Product Title: </label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.title}}</label>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="condition">Product Sub Title:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.sub_title}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Category:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.category}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Sub Category:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.sub_category}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Quantity:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.quantity}}</label>
+                        </div>
                     </div>
 
-                </div>
-                <div class="row">
-                    <div class="col-25">
-                        <label for="condition">Condition:</label>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Sub Category:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.sub_category}}</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Seller:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.seller}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Price:</label>
+                        </div>
+                        <div class="col-25">
+                            <h3 name="item name">$ {{product.price}}</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <button (click)="onGetItClicked()" type="button" class="btn btn-primary">Get It</button>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-25">
-                        <label for="timeleft">Time left:</label>
+                <div *ngIf="product.type==='auction'">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <img src="{{product.image[0]}}" height="400" width="600" class="item-pic" />
                     </div>
-                </div>
-                <div class="row">
-                    <label for="currentbid">Current bid:</label>
-                </div>
-                <div class="row">
-                    <label>Seller Name:</label>
-                </div>
-                <div class="row">
-                    <label>Ranking:</label>
-                </div>
-                <div class="row">
-                    <input type="number" class="col-xs-4 col-sm-4 col-md-4 col-lg-4" name="username" placeholder="Enter the money">
-                    <input type="submit" value="Submit">
+                    <div class="row">
+                        <div class="col-25">
+                            <label name="iname">Product Title: </label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.title}}</label>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="condition">Product Sub Title:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.sub_title}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Category:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.category}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Sub Category:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.sub_category}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Sub Category:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.sub_category}}</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="timeleft">Seller:</label>
+                        </div>
+                        <div class="col-25">
+                            <label name="item name">{{product.seller}}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <button (click)="onGetItClicked()" type="button" class="btn btn-primary">Bid It</button>
+                        </div>
+                    </div>
                 </div>
             </form>
+        </div>
+    </div>
+</div>
+
+<div id="myModal" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{dialogTitle}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{dialogBody}}
+            </div>
+            <div class="modal-footer">
+                <button *ngIf="isError" (click)="onCloseClikced()" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button *ngIf="!isError" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
