--- a/src/app/user-mailbox-inbox/user-mailbox-inbox.component.html
+++ b/src/app/user-mailbox-inbox/user-mailbox-inbox.component.html
@@ -69,7 +69,8 @@
                 {{dialogBody}}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button *ngIf="isError" (click)="onCloseClikced()" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button *ngIf="!isError" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
