--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -15,9 +15,9 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="btn-group margin-0-0-20-0">
-                <input type="button" class="btn btn-outline-secondary" value="Your Order">
+                <!-- <input type="button" class="btn btn-outline-secondary" value="Your Order">
                 <input type="button" class="btn btn-outline-secondary" value="Your Address">
-                <input type="button" class="btn btn-outline-secondary" value="Your Record">
+                <input type="button" class="btn btn-outline-secondary" value="Your Record"> -->
                 <input routerLink="/user/balance" type="button" class="btn btn-outline-secondary" value="Payment">
             </div>
         </div>
