--- a/src/app/user-mailbox-outbox/user-mailbox-outbox.component.html
+++ b/src/app/user-mailbox-outbox/user-mailbox-outbox.component.html
@@ -5,15 +5,15 @@
     <div class="row">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 
-            <button type="button" data-toggle="New collapse" data-target="#new" class="btn btn-primary" [routerLink]="['/inbox']" routerLink="active">
+            <button type="button" data-toggle="New collapse" data-target="#new" class="btn btn-primary" [routerLink]="['/user/mailbox/sent']" routerLink="active">
                         <i class="fas fa-at"></i> <a>Sent</a>
                     </button>
 
-            <button type="button" data-toggle="inbox collapse" data-target="#inbox" class="btn btn-primary" [routerLink]="['/inbox']" routerLink="active">
+            <button type="button" data-toggle="inbox collapse" data-target="#inbox" class="btn btn-primary" [routerLink]="['/user/mailbox']" routerLink="active">
                         <i class="far fa-envelope-open"></i><a>Inbox</a>
                     </button>
 
-            <button type="button" data-toggle="outbox collapse" data-target="#outbox" class="btn btn-primary" [routerLink]="['/outbox']" routerLink="active">
+            <button type="button" data-toggle="outbox collapse" data-target="#outbox" class="btn btn-primary" [routerLink]="['/user/mailbox/outbox']" routerLink="active">
                         <i class="fas fa-envelope"></i><a>Outbox</a>
                     </button>
 
@@ -39,19 +39,6 @@
                 </tbody>
             </table>
 
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-end">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#">Previous</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </div>
 </div>
